--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <script src="%PUBLIC_URL%/env-config.js"></script>
+    <script src="/env-config.js"></script>
     <link rel="icon" type="image/svg+xml" href="/asja-logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ASJA-Website</title>
